@@ -3,6 +3,7 @@ abe-desktop (5) UNRELEASED; urgency=low
   * Convert to a real package instead of having to use equivs plus
     equivs-build-multi
   * Add my image viewer preferences to abe-desktop-common
+  * Add some typical emacs lisp packages to Recommends
   * Bump Standards-Version to 3.9.3
 
  -- Axel Beckert <abe@deuxchevaux.org>  Wed, 18 Jul 2012 10:44:17 +0200
